--- a/News app/BIgCell.xib
+++ b/News app/BIgCell.xib
@@ -1,21 +1,85 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="BIgCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="BIgCell" customModule="News_app" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="267" height="224"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="267" height="224"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4dE-tZ-gwd">
+                        <rect key="frame" x="4" y="6" width="259" height="212"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="OFm-F5-5K8">
+                                <rect key="frame" x="4" y="4" width="251" height="140"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="140" id="7hf-he-Glf"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="NAL-lK-9Fs">
+                                <rect key="frame" x="8" y="152" width="243" height="52"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ieM-PK-Mfi">
+                                        <rect key="frame" x="0.0" y="0.0" width="243" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="cdF-IH-X9y"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ppZ-XW-9Ci">
+                                        <rect key="frame" x="0.0" y="25" width="243" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="NAL-lK-9Fs" secondAttribute="bottom" constant="8" id="7dW-sw-eif"/>
+                            <constraint firstItem="NAL-lK-9Fs" firstAttribute="top" secondItem="OFm-F5-5K8" secondAttribute="bottom" constant="8" id="9ZQ-Zt-IY7"/>
+                            <constraint firstItem="NAL-lK-9Fs" firstAttribute="leading" secondItem="4dE-tZ-gwd" secondAttribute="leading" constant="8" id="VLP-XU-gaZ"/>
+                            <constraint firstAttribute="trailing" secondItem="NAL-lK-9Fs" secondAttribute="trailing" constant="8" id="e7c-l0-yMI"/>
+                            <constraint firstAttribute="trailing" secondItem="OFm-F5-5K8" secondAttribute="trailing" constant="4" id="h76-Mv-icI"/>
+                            <constraint firstItem="OFm-F5-5K8" firstAttribute="leading" secondItem="4dE-tZ-gwd" secondAttribute="leading" constant="4" id="iJg-DD-P18"/>
+                            <constraint firstItem="OFm-F5-5K8" firstAttribute="top" secondItem="4dE-tZ-gwd" secondAttribute="top" constant="4" id="qIf-2o-F5c"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstItem="4dE-tZ-gwd" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="HGj-eo-1xV"/>
+                <constraint firstAttribute="trailing" secondItem="4dE-tZ-gwd" secondAttribute="trailing" constant="4" id="O7a-l6-8qw"/>
+                <constraint firstAttribute="bottom" secondItem="4dE-tZ-gwd" secondAttribute="bottom" constant="6" id="hO3-WX-doa"/>
+                <constraint firstItem="4dE-tZ-gwd" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="6" id="wF4-Mw-Hq0"/>
+            </constraints>
+            <size key="customSize" width="267" height="224"/>
+            <connections>
+                <outlet property="descLbl" destination="ppZ-XW-9Ci" id="DeQ-02-kLb"/>
+                <outlet property="newsImage" destination="OFm-F5-5K8" id="w36-RC-SMp"/>
+                <outlet property="titleLbl" destination="ieM-PK-Mfi" id="I0b-B3-K0L"/>
+            </connections>
+            <point key="canvasLocation" x="-133.58778625954199" y="-22.535211267605636"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="Image" width="712" height="716"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
