--- a/News app/SingUPVC.xib
+++ b/News app/SingUPVC.xib
@@ -1,22 +1,124 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SingUPVC" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SingUPVC" customModule="News_app" customModuleProvider="target">
             <connections>
+                <outlet property="CountryTF" destination="si0-F3-CZG" id="AXR-Gt-4go"/>
+                <outlet property="conteneirView" destination="U5t-uZ-zbj" id="mFZ-gF-zGW"/>
+                <outlet property="fullnameTF" destination="ebH-Lu-Wj4" id="Jlc-l3-Cc4"/>
+                <outlet property="nextBtn" destination="VHW-mr-olq" id="QiJ-wo-eOt"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U5t-uZ-zbj">
+                    <rect key="frame" x="40" y="297.66666666666669" width="313" height="257.00000000000006"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="Fr9-oF-c5V">
+                            <rect key="frame" x="20" y="20" width="273" height="217"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M9f-nc-i84">
+                                    <rect key="frame" x="0.0" y="0.0" width="273" height="21"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="21" id="oxY-m5-HS3"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                    <color key="textColor" systemColor="systemIndigoColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Fullname" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ebH-Lu-Wj4">
+                                    <rect key="frame" x="0.0" y="46" width="273" height="50"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="50" id="dbL-JO-sUf"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nAh-Ow-8Jl">
+                                    <rect key="frame" x="0.0" y="121" width="273" height="21"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="21" id="i2q-eL-stP"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                    <color key="textColor" systemColor="systemIndigoColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Country" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="si0-F3-CZG">
+                                    <rect key="frame" x="0.0" y="167" width="273" height="50"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="50" id="YAw-Zh-9gZ"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="Fr9-oF-c5V" secondAttribute="trailing" constant="20" id="4tM-Ch-hPv"/>
+                        <constraint firstAttribute="height" constant="257" id="MIh-nv-2Tk"/>
+                        <constraint firstItem="Fr9-oF-c5V" firstAttribute="leading" secondItem="U5t-uZ-zbj" secondAttribute="leading" constant="20" id="b7W-jC-mhC"/>
+                        <constraint firstAttribute="bottom" secondItem="Fr9-oF-c5V" secondAttribute="bottom" constant="20" id="hDZ-Av-7aG"/>
+                        <constraint firstItem="Fr9-oF-c5V" firstAttribute="top" secondItem="U5t-uZ-zbj" secondAttribute="top" constant="20" id="vqX-Et-MnJ"/>
+                    </constraints>
+                </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VHW-mr-olq">
+                    <rect key="frame" x="90.666666666666686" y="614.66666666666663" width="212" height="50"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="WWt-oA-vCz"/>
+                        <constraint firstAttribute="width" constant="212" id="yJt-2G-Zn6"/>
+                    </constraints>
+                    <color key="tintColor" systemColor="systemIndigoColor"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" title="Next">
+                        <fontDescription key="titleFontDescription" type="boldSystem" pointSize="22"/>
+                    </buttonConfiguration>
+                    <connections>
+                        <action selector="nextbtn:" destination="-1" eventType="touchUpInside" id="MWk-xf-5PU"/>
+                    </connections>
+                </button>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="b" translatesAutoresizingMaskIntoConstraints="NO" id="PLh-2a-57H">
+                    <rect key="frame" x="60" y="167.66666666666666" width="273" height="94.999999999999972"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="95" id="zqf-Pb-SGE"/>
+                    </constraints>
+                </imageView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemIndigoColor"/>
+            <constraints>
+                <constraint firstItem="U5t-uZ-zbj" firstAttribute="top" secondItem="PLh-2a-57H" secondAttribute="bottom" constant="35" id="CTK-ph-gjB"/>
+                <constraint firstItem="PLh-2a-57H" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="60" id="FMk-Qv-Fv7"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="U5t-uZ-zbj" secondAttribute="trailing" constant="40" id="Lx9-EB-ni2"/>
+                <constraint firstItem="VHW-mr-olq" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="UlN-jT-miW"/>
+                <constraint firstItem="U5t-uZ-zbj" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="40" id="bNe-y5-r6h"/>
+                <constraint firstItem="U5t-uZ-zbj" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="idz-TZ-oyE"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="PLh-2a-57H" secondAttribute="trailing" constant="60" id="lmG-YI-MyL"/>
+                <constraint firstItem="VHW-mr-olq" firstAttribute="top" secondItem="U5t-uZ-zbj" secondAttribute="bottom" constant="60" id="weE-jm-r7x"/>
+            </constraints>
+            <point key="canvasLocation" x="130.53435114503816" y="-12.67605633802817"/>
         </view>
     </objects>
+    <resources>
+        <image name="b" width="654" height="381"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
