--- a/News app/SmallCell.xib
+++ b/News app/SmallCell.xib
@@ -1,21 +1,85 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="SmallCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="SmallCell" customModule="News_app" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="287" height="112"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="287" height="112"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xlb-Uh-ddE">
+                        <rect key="frame" x="2" y="2" width="283" height="108"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="MbS-HE-x7x">
+                                <rect key="frame" x="8" y="8" width="92" height="92"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="MbS-HE-x7x" secondAttribute="height" id="t43-cm-6BT"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="IAM-8q-nAQ">
+                                <rect key="frame" x="110" y="20" width="163" height="72"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WQQ-Ji-qwC">
+                                        <rect key="frame" x="0.0" y="0.0" width="163" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="PVE-Rc-wmj"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xFy-qD-qtB">
+                                        <rect key="frame" x="0.0" y="29" width="163" height="43"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="IAM-8q-nAQ" firstAttribute="leading" secondItem="MbS-HE-x7x" secondAttribute="trailing" constant="10" id="2zO-z5-gpI"/>
+                            <constraint firstItem="IAM-8q-nAQ" firstAttribute="top" secondItem="xlb-Uh-ddE" secondAttribute="top" constant="20" id="QbM-DX-eF8"/>
+                            <constraint firstAttribute="bottom" secondItem="MbS-HE-x7x" secondAttribute="bottom" constant="8" id="W3I-5h-ahq"/>
+                            <constraint firstAttribute="trailing" secondItem="IAM-8q-nAQ" secondAttribute="trailing" constant="10" id="dsM-g1-yJt"/>
+                            <constraint firstItem="MbS-HE-x7x" firstAttribute="leading" secondItem="xlb-Uh-ddE" secondAttribute="leading" constant="8" id="kBc-it-ZhN"/>
+                            <constraint firstAttribute="bottom" secondItem="IAM-8q-nAQ" secondAttribute="bottom" constant="16" id="lBg-TI-xDP"/>
+                            <constraint firstItem="MbS-HE-x7x" firstAttribute="top" secondItem="xlb-Uh-ddE" secondAttribute="top" constant="8" id="xvq-Wb-H8q"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstItem="xlb-Uh-ddE" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="2" id="6qN-YH-fjO"/>
+                <constraint firstAttribute="trailing" secondItem="xlb-Uh-ddE" secondAttribute="trailing" constant="2" id="DCh-X9-1ps"/>
+                <constraint firstAttribute="bottom" secondItem="xlb-Uh-ddE" secondAttribute="bottom" constant="2" id="GoE-EA-kfo"/>
+                <constraint firstItem="xlb-Uh-ddE" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="2" id="VSZ-C7-Enj"/>
+            </constraints>
+            <size key="customSize" width="287" height="112"/>
+            <connections>
+                <outlet property="descLbl" destination="xFy-qD-qtB" id="8ZP-3v-wTa"/>
+                <outlet property="newsImage" destination="MbS-HE-x7x" id="mqt-3l-f9G"/>
+                <outlet property="titleLbl" destination="WQQ-Ji-qwC" id="Ivi-KC-NId"/>
+            </connections>
+            <point key="canvasLocation" x="293.89312977099235" y="10.563380281690142"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="Image" width="712" height="716"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
